--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <div class="header-top-inner">
                                 <div class="logo-menu">
                                         <div class="logo">
-                                            <img src="./img/logo.PNG" alt="">
+                                            <a href=""><img src="./img/logo.PNG" alt=""></a>
                                         </div>
                                         <div class="navbar">
                                                 <div class="nav-icon"><i class="fas fa-bars"></i></div>
@@ -50,14 +50,14 @@
                                         </div>
                                 </div>
                             <div class="form-control">
-                                <div class="control-item search">
-                                        <i class="fas fa-search"></i>
-                                </div>
                                     <div class="control-item search">
-                                        <i class="fas fa-shopping-basket"></i>
+                                        <a href="#"><i class="fas fa-search"></i></a>
                                     </div>
                                     <div class="control-item search">
-                                        <i class="fas fa-user"></i>
+                                        <a href=""><i class="fas fa-shopping-basket"></i></a>
+                                    </div>
+                                    <div class="control-item search">
+                                        <a href=""><i class="fas fa-user"></i></a>
                                     </div>
                                 
                             </div>
@@ -109,8 +109,10 @@
                                 <div class="image">
                                     <img src="./img/strength-icon 2.png" alt="">
                                 </div>
-                                <p class="title">dumbbells</p>
-                                <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <div class="cover-content">
+                                    <p class="title">dumbbells</p>
+                                    <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                </div>
                             </div>
                         </div>  
                         <div class="strength-col">
@@ -118,8 +120,10 @@
                                 <div class="image">
                                     <img src="./img/strength-icon 1.png" alt="">
                                 </div>
-                                <p class="title">Strength</p>
-                                <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <div class="cover-content">
+                                    <p class="title">Strength</p>
+                                    <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                </div>
                             </div>
                             <div class="strength-item image" id='strength'></div>
                         </div>  
@@ -129,8 +133,10 @@
                                 <div class="image">
                                     <img src="./img/strength-icon 3.png" alt="">
                                 </div>
-                                <p class="title">power rack & cages</p>
-                                <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <div class="cover-content">
+                                    <p class="title">power rack & cages</p>
+                                    <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                </div>
                             </div>
                         </div>  
                     </div>
@@ -338,7 +344,6 @@
                         See What They Said About Us
                     </div>
                     <div class="comment-avatar">
-                        
                     </div>
                     <div class="comment-detail">
                         <p>
@@ -405,10 +410,10 @@
                         </p>
                         <div class="icon-social">
                             <div class="icon-inner">
-                                <img src="./img/facebook.png" alt="">
-                                <img src="./img/twitter.png" alt="">
-                                <img src="./img/google.png" alt="">
-                                <img src="./img/youtube.png" alt="">
+                                <a href="https://www.facebook.com/"><img src="./img/facebook.png" alt=""></a>
+                                <a href="https://www.twitter.com/"><img src="./img/twitter.png" alt=""></a>
+                                <a href="https://www.google.com"><img src="./img/google.png" alt=""></a>
+                                <a href="https://www.youtube.com/"><img src="./img/youtube.png" alt=""></a>
                             </div>
                         </div>
                     </div>
