--- a/index.html
+++ b/index.html
@@ -744,11 +744,11 @@
                         </div>
                     </div>
                     <!--Line -->
-                    <div id='l'></div>
+                    <div id='l' class="container      "></div>
                     <!-- End Line -->
                     <div class="footer-end-inner">
                         <div class="row">
-                            <div class="footer-item">
+                            <div class="footer-item col">
                                 <p class="footer-title">Contact us</p>
                                 <ul class="footer-list">
                                     <li class="link-item">
@@ -769,7 +769,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="footer-item">
+                            <div class="footer-item col">
                                 <p class="footer-title">My account</p>
                                 <ul class="footer-list">
                                     <li class="link-item">
@@ -787,7 +787,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="footer-item">
+                            <div class="footer-item col">
                                 <p class="footer-title">Information</p>
                                 <ul class="footer-list">
                                     <li class="link-item">
@@ -804,7 +804,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="footer-item">
+                            <div class="footer-item col">
                                 <p class="footer-title">Quick link</p>
                                 <ul class="footer-list">
                                     <li class="link-item">
