--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class="product-detail-cover">
                             <div class="product-detail-boder">
                                 <div class="product-image">
-                                    <img src="./img/Body Champ Cardio Dual Trainer.png" alt="">
+                                    <a href="#"> <img src="./img/Body Champ Cardio Dual Trainer.png" alt=""></a>
                                     <div class="action">
                                         <ul>
                                             <li class="action-item"><i class="fas fa-shopping-bag"></i></li>
@@ -702,22 +702,22 @@
             <div class="container">
                 <div class="list-logo-inner">
                     <div class="logo-detail">
-                        <img src="./img/fitness.png" alt="">
+                        <a href="#"> <img src="./img/fitness.png" alt=""></a>
                     </div>
                     <div class="logo-detail">
-                        <img src="./img/sport gym.png" alt="">
+                        <a href="#"><img src="./img/sport gym.png" alt=""></a>              
                     </div>
                     <div class="logo-detail">
-                        <img src="./img/health-fitness.png" alt="">
+                        <a href="#"> <img src="./img/health-fitness.png" alt=""></a>
                     </div>
                     <div class="logo-detail">
-                        <img src="./img/best local.png" alt="">
+                        <a href="#"><img src="./img/best local.png" alt=""></a>
                     </div>
                     <div class="logo-detail">
-                        <img src="./img/power lifter.png" alt="">
+                        <a href="#"><img src="./img/power lifter.png" alt=""></a>
                     </div>
                     <div class="logo-detail">
-                        <img src="./img/gym club.png" alt="">
+                        <a href="#"><img src="./img/gym club.png" alt=""></a>
                     </div>
                </div>
             </div>
@@ -729,7 +729,9 @@
                 <div class="container">
                     <div class="footer-head-inner">
                         <div class="logo">
-                            <img src="./img/logo.PNG" alt="">
+                            <a href="#">
+                                <img src="./img/logo.PNG" alt="">
+                            </a>
                         </div>
                         <p class="description">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
