--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <div class="banner-background">
              <!-- Logo Mobile -->
             <div class="logo-moblie">
-                <img src="./img/logo.PNG" id='logo' alt="">
+                <a href="#">  <img src="./img/logo.PNG" id='logo' alt=""></a>
+              
             </div>
             <!-- End Logo Mobile -->
             <!-- Header -->
