--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
                                     <a href="#"> <img src="./img/Body Champ Cardio Dual Trainer.png" alt=""></a>
                                     <div class="action">
                                         <ul>
-                                            <li class="action-item"><i class="fas fa-shopping-bag"></i></li>
-                                            <li class="action-item"><i class="fas fa-eye"></i></li>
-                                            <li class="action-item"><i class="fas fa-heart"></i></li>
-                                            <li class="action-item"><i class="fas fa-exchange-alt"></i></li>
+                                            <li class="action-item"><a href="#"><i class="fas fa-shopping-bag"></i></a></li>
+                                            <li class="action-item"><a href="#"><i class="fas fa-eye"></i></a></li>
+                                            <li class="action-item"><a href="#"><i class="fas fa-heart"></i></a></li>
+                                            <li class="action-item"><a href="#"><i class="fas fa-exchange-alt"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
